2006-10-27  Sven Schuetz
	* backend_sfcb.c, backend_print.c, configure.ac, mofparse.c, symtab.h,
	symtab.c, mofc.y, mofs.l, backend.h:
	Fixed 1585788: support for instances and qualifiers

2006-08-23  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* symtab.c: 
	Fixed 1532423: allow class redefinition (upgrade) if a version
	qualifier is specified.

2006-07-25  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* configure.ac, mofc.y, symtab.c, symtab.h: 
	Fixed 1528352: now the compiler can support forward declarations.
	The old behaviour can be established using --enable-onepass.

2006-07-19 sschuetz
	* backend_sfcb.c:
	Fixed 1525280: changed some function calls due to sfcb changes

2006-01-31    <mihajlov@dyn-9-152-143-45.boeblingen.de.ibm.com>

	* backend_sfcb.c:
	Related to 1420604: adapted to cmpidt.h changes.

	* mofs.l: 
	Fixed 1420397: close include files after EOF. Added support for
	backslash-delimited pathes.

2006-01-26  mihajlov

	* mofparse.c: Enhancement: allow multiple backend options to be
	specified.

2006-01-26    <mihajlov@dyn-9-152-143-45.boeblingen.de.ibm.com>

	* configure.ac, Makefile.am: 
	Fixed 1414767 vpath build failure. Made xFLAGS processing
	more standards compliant.

2006-01-23  a3schuur

	* configure.ac: [ 1408327 ] sfcbmof does not support big/little
	endian in cross-compile Fixing offset problems in P32 mode Setting
	default alignment to 4 Updating configure.ac by removing
	objectImplSwapEndian references

2006-01-23  a3schuur

	* backend_sfcb.c: [ 1408327 ] sfcbmof does not support big/little
	endian in cross-compile Previous fix did not correctly anticipate
	Power32 alignment rules.  objectImplSwapEndian.c has been removed
	because totally inadequate.  objectImpiI32toP32.c has been created
	instead. It recreates classSchemas files for Power32 systems.
	sfcbmof now requires -b P32 to invoke the cross compile support.
	-b P32 only works one way only: It must be executed on a ix86