@@ -1,3 +1,7 @@
+2006-11-07  Sven Schuetz
+	* backend_sfcb.c:
+	Fixed 1587752: support for qualifier and instance swapping
+
 2006-10-27  Sven Schuetz
 	* backend_sfcb.c, backend_print.c, configure.ac, mofparse.c, symtab.h,
 	symtab.c, mofc.y, mofs.l, backend.h:
